styles.css
body {
    margin: 10vw;
    font-family: 'Space Grotesk', sans-serif;
    background-color: black;
    color: white;
}

.values-div {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    border-width: 2px;
    border-radius: 10px;
    border-style: solid;
    border-color: black;
    padding: 1%;
    align-items: stretch;
    justify-content: space-around;
}

.values-div > div {
    padding: 1%;
}

.titano-information {
    display: flex;
    flex-direction: column;
}

.titano-fields p, #results p {
    font-size: 2em;
}

.titano-fields input, .titano-fields select {
    font-size: 0.75em;
}

.titano-fields input {
    width: 80px;
}

.titano-buttons {
    display: flex;
    justify-content: center;
    margin-top: 40px;
}

.input-button {
    border-radius: 10px;
    background-color: #61CE70;
    font-size: 1.2em;
    padding: 1.8em 3.8em;
    border-style: none;
    transition: all 0.1s;
}

.input-button:hover {
    border-style: solid;
    border-color: white;
    border-width: 3px;
}

.input-button:active {
    background-color: black;
    color: #61CE70;
}

/* TAX INFORMATION AND CHILDREN CSS */

.tax-information {
    flex: 1;
}

.tax-information > div {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 10px;
}

.tax-information .input-div {
    display: flex;
    flex-wrap: wrap;
    flex: 3;
    gap: 10px;
}

.tax-information .input-div input {
    min-width: 50px;
    flex: 1;
}

#apply-tax {
    flex: 1;
}

/* TAX INFORMATION AND CHILDREN CSS */

#results {
    margin-top: 20px;
    border-width: 2px;
    border-radius: 10px;
    border-style: solid;
    border-color: black;
    min-height: 200px;
}

#results-summary {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

.label-value {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    gap: 10px;
    padding: 20px;
}

.summary-p {
    font-weight: bold;
    padding: 0;
    margin: 0;
}

.label-value p:nth-child(2) {
    padding: 0;
    margin: 0;
}

/* RANDOM */

.bold {
    font-weight: bold;
    font-size: 1rem;
}

.input-end {
    text-align: end;
}

.green-color {
    color: #61CE70;
}

